fixed view results jumping, added highlight effect, problem with 'about this page' show/hide

--- a/public/stylesheets/widget/sass/screen.sass
+++ b/public/stylesheets/widget/sass/screen.sass
@@ -104,7 +104,7 @@ table
   &.signup td
     max-width: 400px
   .score 
-    padding-right: 5px
+    padding-right: 5px  
   
 
 .create-question
@@ -616,9 +616,12 @@ table.tablesorter
   background-color: #54afe2
   color: white
 
-.bottom_status a
+.link_style a
   color: #008
-  font-weight: bolder
+  font-weight: bold
+  &:hover
+    color: white
+    font-weight: bolder
 
 #tellme_prepend_spot
 //  text-align: left
@@ -669,9 +672,6 @@ table.tablesorter
   font-size: 24px * $scaleFactor
   //padding-bottom: 2px                         /* har*/
 
-.link_color
-  color: #008
-
 .question
   font-size: 16px                             /*har*/
   width: 395px
@@ -682,7 +682,4 @@ table.tablesorter
 
 .idea_result
   color: #555555
-
-.question_mark
-  color: #008
-  font-weight: bolder
+  width: 67.5%  
